--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
 
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My Learning</p>
+            <!-- <p>My Learning</p> -->
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase anything yet</p>
+                </div>
+
+            </div>
             <i class="fa-solid fa-cart-shopping" style="color: #000000;"></i>
             <i class="fa-solid fa-bell" style="color: #000000;"></i>
             <i class="fa-solid fa-user" style="color: #000000;"></i>
@@ -50,6 +57,10 @@
     <!--Sale Image-->
     <div class="sale-image">
         <img src="sale image.png" alt="sale image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash! 24 hours to save</h2>
+            <p>Get the top Courses for just 499. Just one time to save but a lifetime to learn</p>
+        </div>
     </div>
 
     <!--recommended-->
